--- a/machinelearning/app/templates/app/index.html
+++ b/machinelearning/app/templates/app/index.html
@@ -4,7 +4,7 @@
 {% csrf_token %}
 
 <label for="diagnosis">diagnosis</label>
-<input id="diagnosis" name="diagnosis" type="number"
+<input id="diagnosis" name="diagnosis" type="number" min="0" max="1"
 {% if diagnosis %}value="{{diagnosis}}"{% endif %}
 />
 
